# app/Http/Controllers/UserCartsController.php
@@ -9,6 +9,35 @@ use Illuminate\Support\Facades\Auth;
 
 class UserCartsController extends Controller
 {
+    /**
+     * @OA\Get(
+     *      path="/user-carts/{user_id}",
+     *      tags={"카트"},
+     *      summary="카트 보기",
+     *      @OA\Parameter(
+     *          name="user_id",
+     *          description="user_id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="number"
+     *          )
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="success",
+     *       ),
+     *       @OA\Response(
+     *          response=401,
+     *          description="unauthorized"
+     *      ),
+     *       security={
+     *           {"bearerAuth": {}}
+     *       }
+     *     )
+     *
+     */
     public function show(User $user)
     {
         if (Auth::user()->id != $user->id) {
